--- a/css/style.css
+++ b/css/style.css
@@ -188,6 +188,56 @@ html {
   filter: drop-shadow(1px 2px 4px rgba(0,0,0,.3));
 }
 
+.video {
+ padding: 20px ;
+ margin-top: 40px;
+ width: 100%;
+ height: 800px;
+}
+
+.video-container{
+ width: 90%;
+ height: 90%;
+ background-color: var(--black);
+ margin: 0 auto;  
+}
+
+.video-container iframe{
+  width: 100%;
+  height: 100%;
+}
+
+.footer {
+  padding: 10px;
+  width: 100%;
+  margin-top: 40px;
+  background-color: var(--black);
+
+}
+
+.footer-container{
+max-width: 1200px;
+margin: 0 auto;
+display: flex;
+justify-content: flex-start;
+gap: 20px;
+flex-wrap: wrap;
+}
+
+.footer-list li{
+margin: 10px 0;
+}
+
+.footer-list li a{ 
+  display: flex;
+  align-items: center;
+  gap: 10px;
+
+  color: var(--vermelho);
+
+}
+
+
 @keyframes slide {
   0% {
     transform: translate3d(-30px, 0 ,0);
@@ -234,4 +284,12 @@ html {
     line-height: 28px;
     text-align: left;
   }
+  .video{
+    height: 400px;
+  }
+  .video-container iframe{
+    width: 100%;
+    height: 100%;
+  }
 }
+
